@@ -34,6 +34,7 @@
     Sequeira.
 25. When searching for lyrics, if fail and artist starts with "The " then try
     again without "The "
+26. Add "Refresh" action to hover actions for podcasts.
 
 2.4.2
 -----
